# EDA-Tool

./: .gitignore  LICENSE  Procfile  README.md  eda_report.html  pyproject.toml  requirements.txt
docs/: changelog.md  cli.md  developer_guide.md  installation.md  python_api.md  quickstart.md  report_structure.md
examples/: iris eda_report.html
src/core/: __init__.py  cli.py  html_report_generator.py  loader.py  manual_profiler_tester.py  manual_test_html.py  manual_test_profiler.py  manual_test_vis.py  pipeline.py  profiler.py  visualizer.py
src/core/profiler/: base.py  column_profiler.py  correlations.py  interactions.py  summary.py  warnings.py
src/eda_tool/: __init__.py  cli.py  html_report_generator.py  loader.py  pipeline.py  visualizer.py
src/eda_tool/html_report/: __init__.py  correlations.py  generator.py  missing.py  overview.py  sample.py  script_string.py  style_string.py  utils.py  variables.py
src/eda_tool/html_report/sections/: interactions.py
src/eda_tool/profiler/: __init__.py  base.py  column_profiler.py  interactions.py  warnings.py
tests/: generate_samples.py  test_loader.py  test_pipeline.py  test_profiler.py
tests/sample_files/: generate_samples.py
web/: app.py
web/templates/: upload.html
