[project]
name = "eda_tool"
version = "0.1.0"
description = "A lightweight EDA pipeline with HTML report generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scipy", 
    "seaborn",
    "wordcloud",
    "pyarrow",
    "fastapi"
]

[project.scripts]
eda = "eda_tool.cli:main"